--- a/doc/03realizacija.tex
+++ b/doc/03realizacija.tex
@@ -1,2 +1,2 @@
 \chapter{Realizacija sistema}\label{realizacija}
-Realizacija
+U ovom poglavlju nalazi se par odabranih realizacija stavki koje su predstavljale veći izazov za implementaciju, uz način na koji su izazovi prevaziđeni i navedene isečke izvornog koda.
