--- a/doc/main.tex
+++ b/doc/main.tex
@@ -17,6 +17,7 @@
 \usetikzlibrary{positioning}
 \tikzset{entity/.style={
     draw=black,
+    font=\footnotesize,
     fill=yellow!16,
     rectangle split,
     rectangle split parts = 2,
@@ -46,8 +47,6 @@
     extendedchars=false,
     inputencoding=utf8
 }
-\usepackage[titletoc]{appendix}
-%\usepackage{float}
 \graphicspath{{images/}}
 %\setlength{\parskip}{0.5em}
 
