--- a/doc/literatura.bib
+++ b/doc/literatura.bib
@@ -50,3 +50,10 @@
 	url =				{https://github.com/Engelberg/instaparse},
 	urldate =		"2016-09-22"
 }
+
+@online{leiningen,
+	title =			{Leiningen},
+	subtitle=		{For automating {Clojure} projects without setting your hair on fire},
+	url =				{http://leiningen.org},
+	urldate =		"2016-10-02"
+}
