--- a/doc/main.tex
+++ b/doc/main.tex
@@ -55,9 +55,30 @@
 \title{Diplomski rad}
 \date{20. septembar 2016.}
 \begin{document}
-\maketitle
+\begin{titlepage}
+\centering
+\includegraphics[width=0.4\textwidth]{etf}\par
+\vspace{1cm}
+{\scshape\Huge Izrada web aplikacije za polaganje testova znanja \par}
+\vspace{0.5cm}
+{\scshape\Large Development of web application for taking exams \par}
+\vspace{1cm}
+{\bfseries\large Diplomski rad \par}
+\vspace{1cm}
+
+\begin{tabularx}{0.8\textwidth}{l c}
+Student: \hfill & \itshape Dimitrije Radojević, br. ind. 09/0112 \\
+\hfill & \hfill \\
+Mentori: \hfill & \itshape Boško Nikolić, PhD \\
+\hfill & \itshape Dražen Drašković, MSc
+\end{tabularx}
+\vfill
+{Elektrotehnički fakultet, Univerzitet u Beogradu \par}
+\today
+\end{titlepage}
 \tableofcontents
 \input{00uvod.tex}
+% TODO sredi reference iz zahteva
 \input{01zahtevi.tex}
 \input{02sistem.tex}
 \input{03realizacija.tex}
