--- a/doc/03realizacija.tex
+++ b/doc/03realizacija.tex
@@ -1,2 +1,4 @@
 \chapter{Realizacija sistema}\label{realizacija}
 U ovom poglavlju nalazi se par odabranih realizacija stavki koje su predstavljale veći izazov za implementaciju, uz način na koji su izazovi prevaziđeni i navedene isečke izvornog koda.
+
+\section{Anti-forgery token za AJAX zahteve}
